src/test/deca/context/valid/sansObj/leq-int-float.deca
// Description:
//          Test de l'opérateur <= sur des flottants, des booléens et des entiers, et sur des entiers convertis en flottants
//
// Résultat:
//          Succès
//
{
    float a = 2.5;
    float b = 6.8;

    int c = 8;
    int d = 10;

    if (a <= b){}
    if (c <= d){}
    if (a <= c){}
    if (d <= b){}
}